@@ -10,6 +10,7 @@ glibc (2.3.6-7) UNRELEASED; urgency=low
     - Handle the case where /etc/localtime does not exists.  (Closes: 
       #360383).
   * local/manpages/tzconfig.8: Update the manpage accordingly.
+  * script.in/kernelcheck.sh: Also take in account 64-bit mips(el) kernels.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 10 Apr 2006 06:40:33 +0200
 
